--- a/SmartParking/app/src/main/AndroidManifest.xml
+++ b/SmartParking/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -36,7 +35,15 @@
                 <action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
         </activity>
+
+        <provider
+            android:authorities="br.cin.ufpe.inesescin.smartparking.util.SuggestionsProvider"
+            android:name=".util.SuggestionsProvider">
+        </provider>
+
     </application>
 
 </manifest>
