--- a/SmartParking/app/src/main/AndroidManifest.xml
+++ b/SmartParking/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -34,17 +35,24 @@
 
         <provider
             android:name=".util.SuggestionsProvider"
-            android:authorities="br.cin.ufpe.inesescin.smartparking.util.SuggestionsProvider"></provider>
+            android:authorities="br.cin.ufpe.inesescin.smartparking.util.SuggestionsProvider" />
 
         <activity android:name=".SailsMapActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.SEARCH" />
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
+        </activity>
+        <activity android:name=".ListSpotsActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
         </activity>
     </application>
 
